// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[routes] <AppearanceRoute /> renders 404 error page when no appearance exists 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      Page not found
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m20 33.4c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z m-1.6 8.2h3.2v10h-3.2v-10z m0 13.4h3.2v3.4h-3.2v-3.4z"
        />
      </g>
    </svg>
    <p>
      This page does not exist - please use the site navigation to find what you're looking for.
    </p>
  </div>
</article>
`;

exports[`[routes] <AppearanceRoute /> renders 500 error page when slug isn't in the store 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage-content"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m20 33.4c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z m-1.6 8.2h3.2v10h-3.2v-10z m0 13.4h3.2v3.4h-3.2v-3.4z"
        />
      </g>
    </svg>
    <p>
      An error has occurred, please try again.
    </p>
  </div>
</article>
`;

exports[`[routes] <AppearanceRoute /> renders a loader when item is being fetched 1`] = `
<span
  class="Loader PageLoader"
>
  <div
    class="Loader-animation"
  >
    <span />
    <span />
    <span />
  </div>
</span>
`;

exports[`[routes] <AppearanceRoute /> renders correctly 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1>
      Nothing But a Test Gig
    </h1>
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m31.6 33.4v-18.4h-23.2v18.4h23.2z m0-26.8c1.8 0 3.4 1.6 3.4 3.4v23.4c0 1.8-1.6 3.2-3.4 3.2h-23.2c-1.9 0-3.4-1.4-3.4-3.2v-23.4c0-1.8 1.5-3.4 3.4-3.4h1.6v-3.2h3.4v3.2h13.2v-3.2h3.4v3.2h1.6z m-3.2 11.8v3.2h-3.4v-3.2h3.4z m-6.8 0v3.2h-3.2v-3.2h3.2z m-6.6 0v3.2h-3.4v-3.2h3.4z"
          />
        </g>
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-20T20:00:00"
          title="Saturday, October 20, 2018"
        >
          Saturday, October 20, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
          />
        </g>
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-20T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-21T01:00:00"
          title="1:00 AM"
        >
          1:00 AM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="Meow - 9 Edward Street, Te Aro, Wellington 6011"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m20 19.1q1.7 0 2.9-1.2t1.2-2.9-1.2-2.9-2.9-1.2-2.9 1.2-1.2 2.9 1.2 2.9 2.9 1.2z m0-15.7q4.8 0 8.2 3.4t3.4 8.2q0 2.4-1.2 5.5t-2.9 5.9-3.4 5.1-2.8 3.8l-1.3 1.3q-0.5-0.5-1.2-1.4t-2.9-3.6-3.5-5.2-2.8-5.8-1.2-5.6q0-4.8 3.4-8.2t8.2-3.4z"
          />
        </g>
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        Meow
      </span>
    </div>
    <div
      class="Meta Appearance-audience"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m26.6 21.6c3.9 0 11.8 2 11.8 5.9v4.1h-10v-4.1c0-2.5-1.4-4.4-3.3-5.8 0.5-0.1 1.1-0.1 1.5-0.1z m-13.2 0c3.9 0 11.6 2 11.6 5.9v4.1h-23.4v-4.1c0-3.9 7.9-5.9 11.8-5.9z m0-3.2c-2.8 0-5-2.3-5-5s2.2-5 5-5 4.9 2.2 4.9 5-2.2 5-4.9 5z m13.2 0c-2.7 0-5-2.3-5-5s2.3-5 5-5 5 2.2 5 5-2.2 5-5 5z"
          />
        </g>
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Audience
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        18+
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Appearance-image isLoading"
    >
      <img
        src="https://s3.amazonaws.com/mynameisviii-static/appearances/nothing-but-a-test-gig-2018-10-20.jpg"
        title="Nothing But a Test Gig"
      />
      <span
        class="Loader"
      >
        <div
          class="Loader-animation"
        >
          <span />
          <span />
          <span />
        </div>
      </span>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          This is nothing but a test gig. It's not a real event or anything, so don't come.
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <a
              class="ActListing-link"
              href="https://mynameisviii.com"
              rel="noopener"
              target="_blank"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  Viii
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:middle"
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
                        />
                      </g>
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      Goth/Electronic
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:middle"
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m20 19.1q1.7 0 2.9-1.2t1.2-2.9-1.2-2.9-2.9-1.2-2.9 1.2-1.2 2.9 1.2 2.9 2.9 1.2z m0-15.7q4.8 0 8.2 3.4t3.4 8.2q0 2.4-1.2 5.5t-2.9 5.9-3.4 5.1-2.8 3.8l-1.3 1.3q-0.5-0.5-1.2-1.4t-2.9-3.6-3.5-5.2-2.8-5.8-1.2-5.6q0-4.8 3.4-8.2t8.2-3.4z"
                        />
                      </g>
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      Wellington
                    </span>
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="Viii"
                  src="https://s3.amazonaws.com/mynameisviii-static/viii-profile.jpg"
                />
              </figure>
            </a>
          </article>
        </div>
      </section>
      <section
        class="Appearance-tickets"
      >
        <h2>
          <span>
            Get tickets
          </span>
        </h2>
        <div
          class="Appearance-tickets-items"
        >
          <article
            class="SaleListing"
          >
            <a
              class="SaleListing-link"
              href="http://ticketek.co.nz/"
              rel="noopener"
              target="_blank"
            >
              <div
                class="SaleListing-icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align:middle"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m22.9 10.1l7 7-12.8 12.8-7-7z m-4.8 21.8l13.8-13.8q0.5-0.4 0.5-1t-0.5-1l-8-8q-0.4-0.4-1-0.4t-1 0.4l-13.8 13.8q-0.5 0.4-0.5 1t0.5 1l8 8q0.4 0.4 1 0.4t1-0.4z m19.9-14.2l-20.3 20.3q-0.8 0.8-2 0.8t-2-0.8l-2.8-2.8q1.2-1.3 1.2-3.1t-1.2-3-3-1.2-3.1 1.2l-2.8-2.8q-0.8-0.8-0.8-2t0.8-2l20.3-20.3q0.8-0.8 2-0.8t2 0.8l2.8 2.8q-1.2 1.3-1.2 3.1t1.2 3 3 1.2 3.1-1.2l2.8 2.8q0.8 0.8 0.8 2t-0.8 2z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="SaleListing-details"
              >
                <h3>
                  Tickets: 
                  <span
                    class="Price"
                  >
                    <span>
                      NZ$10
                    </span>
                  </span>
                </h3>
                <section
                  class="SaleListing-meta"
                >
                  <div
                    class="Meta SaleListing-website"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:middle"
                      viewBox="0 0 40 40"
                      width="1em"
                    >
                      <g>
                        <path
                          d="m27.3 23.4h5.6c0.2-1.1 0.5-2.2 0.5-3.4s-0.3-2.3-0.5-3.4h-5.6c0.1 1.1 0.2 2.2 0.2 3.4s-0.1 2.3-0.2 3.4z m-3 9.2c3-1 5.7-3.2 7.3-6h-5c-0.5 2.2-1.3 4.1-2.3 6z m-0.4-9.2c0.2-1.1 0.2-2.2 0.2-3.4s0-2.3-0.2-3.4h-7.8c-0.2 1.1-0.2 2.2-0.2 3.4s0 2.3 0.2 3.4h7.8z m-3.9 9.9c1.4-2 2.5-4.2 3.2-6.7h-6.4c0.7 2.5 1.8 4.7 3.2 6.7z m-6.6-19.9c0.5-2.2 1.3-4.1 2.3-6-3 1-5.7 3.2-7.3 6h5z m-5 13.2c1.6 2.8 4.3 5 7.3 6-1-1.9-1.8-3.9-2.3-6h-5z m-1.3-3.2h5.6c-0.1-1.1-0.2-2.2-0.2-3.4s0.1-2.3 0.2-3.4h-5.6c-0.2 1.1-0.5 2.2-0.5 3.4s0.3 2.3 0.5 3.4z m12.9-16.7c-1.4 2.1-2.5 4.2-3.2 6.7h6.4c-0.7-2.5-1.8-4.6-3.2-6.7z m11.6 6.7c-1.6-2.8-4.3-5-7.3-6 1 1.9 1.8 3.9 2.3 6h5z m-11.6-10c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z"
                        />
                      </g>
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Website
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      ticketek.co.nz
                    </span>
                  </div>
                </section>
              </div>
            </a>
          </article>
          <article
            class="SaleListing"
          >
            <span
              class="SaleListing-link"
            >
              <div
                class="SaleListing-icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align:middle"
                  viewBox="0 0 40 40"
                  width="1em"
                >
                  <g>
                    <path
                      d="m22.9 10.1l7 7-12.8 12.8-7-7z m-4.8 21.8l13.8-13.8q0.5-0.4 0.5-1t-0.5-1l-8-8q-0.4-0.4-1-0.4t-1 0.4l-13.8 13.8q-0.5 0.4-0.5 1t0.5 1l8 8q0.4 0.4 1 0.4t1-0.4z m19.9-14.2l-20.3 20.3q-0.8 0.8-2 0.8t-2-0.8l-2.8-2.8q1.2-1.3 1.2-3.1t-1.2-3-3-1.2-3.1 1.2l-2.8-2.8q-0.8-0.8-0.8-2t0.8-2l20.3-20.3q0.8-0.8 2-0.8t2 0.8l2.8 2.8q-1.2 1.3-1.2 3.1t1.2 3 3 1.2 3.1-1.2l2.8 2.8q0.8 0.8 0.8 2t-0.8 2z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="SaleListing-details"
              >
                <h3>
                  Door sales: 
                  <span
                    class="Price"
                  >
                    <span>
                      NZ$20
                    </span>
                  </span>
                </h3>
                <section
                  class="SaleListing-meta"
                />
              </div>
            </span>
          </article>
        </div>
      </section>
    </div>
    <section
      class="Appearance-images"
    >
      <h2>
        <span>
          Photos
        </span>
      </h2>
      <div
        class="Gallery Appearance-images-items"
      >
        <figure
          class="Image"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="Test"
              src="https://scontent-syd2-1.cdninstagram.com/vp/54127bb2824cd7fdc53b16529d2cbf66/5B9DCAA5/t51.2885-15/s640x640/sh0.08/e35/22071123_377597075993359_300443987536248832_n.jpg"
            />
          </div>
          <figcaption>
            Test
          </figcaption>
        </figure>
        <figure
          class="Image"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="Test 2"
              src="https://scontent-syd2-1.cdninstagram.com/vp/6948ffd2ec1841a230fd4a2951d9682b/5BB16229/t51.2885-15/s640x640/sh0.08/e35/22071185_120049202025917_3641908262988677120_n.jpg"
            />
          </div>
          <figcaption>
            Test 2
          </figcaption>
        </figure>
        <figure
          class="Image"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="Test 3"
              src="https://scontent-syd2-1.cdninstagram.com/vp/ca18e3e0d39573400c30b9f0fffac979/5B9E448A/t51.2885-15/s640x640/sh0.08/e35/21985087_1131650620300022_6079660459575738368_n.jpg"
            />
          </div>
          <figcaption>
            Test 3
          </figcaption>
        </figure>
        <figure
          class="Image"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="Test 4"
              src="https://scontent-syd2-1.cdninstagram.com/vp/3d5a511d89df625d3aedf6a39d62b734/5BA72356/t51.2885-15/e35/28429228_1781197762175359_1584060036995350528_n.jpg"
            />
          </div>
          <figcaption>
            Test 4
          </figcaption>
        </figure>
      </div>
    </section>
  </div>
</article>
`;
